[gd_scene load_steps=11 format=3 uid="uid://bf1dfcbgncoh3"]

[ext_resource type="Script" path="res://intro/Script/scriptSayWord/SayWords.gd" id="1_4dvqc"]
[ext_resource type="Texture2D" uid="uid://paxs7634bd3o" path="res://assets/bg/Screenshot (157).png" id="2_cg5x1"]
[ext_resource type="Script" path="res://godot-whisper/addons/godot_whisper/capture_stream_to_text.gd" id="3_rkalm"]
[ext_resource type="Texture2D" uid="uid://cac4o0n45wve6" path="res://assets/icon/Icon_ArrowLeft.png" id="4_v1460"]
[ext_resource type="Script" path="res://godot-whisper/addons/godot_whisper/label_transcribe.gd" id="5_6o7pf"]
[ext_resource type="Script" path="res://intro/Game/GameSayWord/E.gd" id="5_rjxmm"]

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_r1ecb"]

[sub_resource type="WhisperResource" id="WhisperResource_8wh2x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bkj8a"]
bg_color = Color(1, 0.333333, 0.313726, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.470588, 0.235294, 0, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k238e"]

[node name="SayWords" type="Node2D"]
script = ExtResource("1_4dvqc")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1155.0
offset_bottom = 646.0
texture = ExtResource("2_cg5x1")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamMicrophone_r1ecb")
volume_db = 0.937

[node name="score" type="Label" parent="."]
offset_left = 15.0
offset_right = 176.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Score :"

[node name="SpeechToText" type="SpeechToText" parent="."]
language_model = SubResource("WhisperResource_8wh2x")
script = ExtResource("3_rkalm")

[node name="Button" type="Button" parent="."]
offset_left = 540.0
offset_top = 465.0
offset_right = 618.0
offset_bottom = 543.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_bkj8a")

[node name="E" type="Node2D" parent="Button"]
position = Vector2(-631, -318)
script = ExtResource("5_rjxmm")

[node name="Sprite2D" type="Sprite2D" parent="Button/E"]

[node name="Timer" type="Timer" parent="Button/E"]

[node name="Button2" type="Button" parent="."]
offset_left = 1027.0
offset_top = 15.0
offset_right = 1132.0
offset_bottom = 109.0
theme_override_styles/normal = SubResource("StyleBoxFlat_k238e")
icon = ExtResource("4_v1460")
flat = true
expand_icon = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_top = 666.0
offset_right = 40.0
offset_bottom = 706.0
script = ExtResource("5_6o7pf")

[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button" to="Button/E" method="_on_button_pressed"]
[connection signal="timeout" from="Button/E/Timer" to="Button/E" method="_on_timer_timeout"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
