extends Node2D

# Define default direction to the right
var direction := Vector2.RIGHT

# Declare the Whisper API variable (assume it's integrated elsewhere in the project)
var whisper_api

# สวัสดีครับอิอิ
# Export the press sound effect for easy assignment in the editor
@export var PressSFX: AudioStreamPlayer2D
# สวัสดีครับอิอิ
# Define the floating object node and speed variable
@onready var floating_object: Node2D = $Button/E
var speed: float = 100

# สวัสดีครับอิอิ
# Define the audio player and target words
@onready var audio_player: AudioStreamPlayer2D = $AudioStreamPlayer2D
var target_words: Array = ["apple", "mango", "watermelon"]
@onready var checktext =$RichTextLabel

# สวัสดีครับอิอิ
# Define score and the score label node
var score: int = 0

@onready var score_label: Label = $score

# สวัสดีครับอิอิ
# Initialize the audio player in the _ready function
func _ready():
	audio_player = $AudioStreamPlayer2D
	score_label.text = ('Score: 0')
# สวัสดีครับอิอิ
# Process function to move the floating object
func _process(delta: float) -> void:
# สวัสดีครับอิอิ
	# Change direction if the floating object reaches the screen edge
	if floating_object.global_position.x > get_viewport_rect().size.x:
		direction = Vector2.LEFT
	elif floating_object.global_position.x < 0:
		direction = Vector2.RIGHT
# สวัสดีครับอิอิ
	# Update the floating object's position
	floating_object.position += direction * speed * delta
	if score == 5:
		await get_tree().create_timer(0.2).timeout
		get_tree().change_scene_to_file("res://totalgame1.tscn")

func get_score() -> int:
# สวัสดีครับอิอิ
	return score

func set_score(new_score: int):
	score = new_score
# สวัสดีครับอิอิ
	update_score_in_node_e()

func update_score_in_node_e():
# สวัสดีครับอิอิ
	var node_e = get_node("/root/intro/Game/GameSayWord/NodeE")  # Adjust the path to Node E as needed
	if node_e and node_e.has_method("update_score"):
		node_e.update_score(score)
	else:
# สวัสดีครับอิอิ
		print("Error: Node E not found or does not have method 'update_score'")
# Placeholder function for when the audio stream finishes playing
func _on_audio_stream_player_2d_finished():
	pass # Replace with function body if needed

# สวัสดีครับอิอิ
# Function to handle button press
func _on_button_pressed():
	# Call the method to capture and process speech
	capture_and_process_speech()

# สวัสดีครับอิอิ
# Function to capture and process speech
func capture_and_process_speech():
	# Simulate the speech-to-text process
	var spoken_text = CaptureStreamToText()
	if spoken_text.to_lower() in target_words:
		audio_player.play()
# สวัสดีครับอิอิ
		score += 1
		score_label.text = ('Score: ' + str(score))
		print('ได้แล้ว: ' + spoken_text)
# สวัสดีครับอิอิ

# Function to handle second button press
func _on_button_2_pressed():
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
	await get_tree().create_timer(0.2).timeout
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
	get_tree().change_scene_to_file("res://intro/Game/Game.tscn")

# สวัสดีครับอิอิ
# Simulated function to capture and convert speech to text
func CaptureStreamToText() -> String:
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัส

# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
# สวัสดีครับอิอิ
